--- a/pub/index.html
+++ b/pub/index.html
@@ -6,17 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <link rel="icon" type="image/png" href="images/favicon.png">
-    <link rel="stylesheet" type="text/css" href="./styles.css">
+    <link rel="stylesheet" type="text/css" href="/dist/styles.css">
     <title>Expensify App</title>
 </head>
 <body>
     <div>
          <div id="one">
-            
          </div>
     </div>
     
-    <script src="/bundle.js"></script>
+    <script src="/dist/bundle.js"></script>
 </body>
 </html>
 
